--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "test": "father test",
     "coverage": "father test --coverage",
     "gh-pages": "npm run docs:build && father doc deploy",
-    "now-build": "npm run docs:build"
+    "now-build": "npm run docs:build",
+    "postinstall": "cd node_modules/rc-tree && npm install && npm run build"
   },
   "peerDependencies": {
     "react": "*",
