have run npm run compile (and added to precommit in package,json) and removed es and lib from gitignore file.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "gh-pages": "npm run docs:build && father doc deploy",
     "now-build": "npm run docs:build"
   },
+  "precommit": [
+    "compile"
+  ],
   "peerDependencies": {
     "react": "*",
     "react-dom": "*"
